syntax = "proto3";
package registry.unassigned_nodes_config.v1;

// Config applied to the set of all unassigned nodes.
message UnassignedNodesConfigRecord {
  // The list of public keys whose owners have "readonly" SSH access to all unassigned replicas,
  // in case it is necessary to perform subnet recovery.
  repeated string ssh_readonly_access = 1;

  // The replica version that the unassigned nodes are supposed to run.
  string replica_version = 2;
}
